{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 139,
  "lineage": "888e2039-65a5-309f-833d-f9841f18fb8d",
  "resources": [
    {
      "module": "module.sthlm-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider.aws.sthlm",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01d965b90792d9bf7",
            "arn": "arn:aws:ec2:eu-north-1:106618949447:instance/i-0fb1f23415b0556c6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0fb1f23415b0556c6",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mattias-public-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-089b636a6486f00eb",
            "private_dns": "ip-10-0-1-33.eu-north-1.compute.internal",
            "private_ip": "10.0.1.33",
            "public_dns": "ec2-13-48-85-121.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.85.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00081252f8ac5a762",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0776d23ee4875f1e8",
              "sg-0785f6bf4abbfc115"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0284190e5238eaa21",
            "tags": {
              "Maintainer": "Mattias",
              "Name": "Mattias",
              "Service": "Hello"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0776d23ee4875f1e8",
              "sg-0785f6bf4abbfc115"
            ]
          },
          "dependencies": [
            "module.sthlm-instance.aws_key_pair.mattias",
            "module.sthlm-instance.aws_security_group.allow_http",
            "module.sthlm-instance.aws_security_group.allow_ssh",
            "module.sthlm-instance.aws_subnet.main_subnet",
            "module.sthlm-instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ff-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider.aws.ff",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cc9fe9200c6ec8c",
            "arn": "arn:aws:ec2:eu-central-1:106618949447:instance/i-0bed60b074b272b17",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0bed60b074b272b17",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mattias-public-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a517331e511f7cf3",
            "private_dns": "ip-10-0-1-250.eu-central-1.compute.internal",
            "private_ip": "10.0.1.250",
            "public_dns": "ec2-18-184-184-191.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.184.184.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0eeb09b7d10d435b5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-010c295798f1f982d",
              "sg-0b1930d42781ccedc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027cc3c3e7ab9b304",
            "tags": {
              "Maintainer": "Mattias",
              "Name": "Mattias",
              "Service": "Hello"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-010c295798f1f982d",
              "sg-0b1930d42781ccedc"
            ]
          },
          "dependencies": [
            "module.ff-instance.aws_key_pair.mattias",
            "module.ff-instance.aws_security_group.allow_http",
            "module.ff-instance.aws_security_group.allow_ssh",
            "module.ff-instance.aws_subnet.main_subnet",
            "module.ff-instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sthlm-instance",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws.sthlm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-06d21c6cda5a3b0ed",
            "owner_id": "106618949447",
            "tags": {
              "Maintainer": "Mattias",
              "Name": "Mattias",
              "Service": "Hello"
            },
            "vpc_id": "vpc-03d562dad8ca3bd74"
          },
          "dependencies": [
            "module.sthlm-instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ff-instance",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws.ff",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-03d68eadd648d0165",
            "owner_id": "106618949447",
            "tags": {
              "Maintainer": "Mattias",
              "Name": "Mattias",
              "Service": "Hello"
            },
            "vpc_id": "vpc-02a461d1468ee279f"
          },
          "dependencies": [
            "module.ff-instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sthlm-instance",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider.aws.sthlm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f4d07643054156d0",
            "owner_id": "106618949447",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06d21c6cda5a3b0ed",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Maintainer": "Mattias",
              "Name": "Mattias",
              "Service": "Hello"
            },
            "vpc_id": "vpc-03d562dad8ca3bd74"
          },
          "dependencies": [
            "module.sthlm-instance.aws_internet_gateway.igw",
            "module.sthlm-instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ff-instance",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider.aws.ff",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ba5f58377c1e386d",
            "owner_id": "106618949447",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03d68eadd648d0165",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Maintainer": "Mattias",
              "Name": "Mattias",
              "Service": "Hello"
            },
            "vpc_id": "vpc-02a461d1468ee279f"
          },
          "dependencies": [
            "module.ff-instance.aws_internet_gateway.igw",
            "module.ff-instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sthlm-instance",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-tbl-link1",
      "provider": "provider.aws.sthlm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5bb1ce89c3074ff",
            "route_table_id": "rtb-0f4d07643054156d0",
            "subnet_id": "subnet-0284190e5238eaa21"
          },
          "dependencies": [
            "module.sthlm-instance.aws_internet_gateway.igw",
            "module.sthlm-instance.aws_route_table.main",
            "module.sthlm-instance.aws_subnet.main_subnet",
            "module.sthlm-instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ff-instance",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-tbl-link1",
      "provider": "provider.aws.ff",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a519bc1d3acb7df",
            "route_table_id": "rtb-0ba5f58377c1e386d",
            "subnet_id": "subnet-027cc3c3e7ab9b304"
          },
          "dependencies": [
            "module.ff-instance.aws_internet_gateway.igw",
            "module.ff-instance.aws_route_table.main",
            "module.ff-instance.aws_subnet.main_subnet",
            "module.ff-instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sthlm-instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider.aws.sthlm",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:106618949447:security-group/sg-0776d23ee4875f1e8",
            "description": "Allow http inbound traffic",
            "egress": [],
            "id": "sg-0776d23ee4875f1e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": null,
            "owner_id": "106618949447",
            "revoke_rules_on_delete": false,
            "tags": {
              "Maintainer": "Mattias",
              "Name": "Mattias",
              "Service": "Hello"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d562dad8ca3bd74"
          },
          "dependencies": [
            "module.sthlm-instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ff-instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider.aws.ff",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:106618949447:security-group/sg-010c295798f1f982d",
            "description": "Allow http inbound traffic",
            "egress": [],
            "id": "sg-010c295798f1f982d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": null,
            "owner_id": "106618949447",
            "revoke_rules_on_delete": false,
            "tags": {
              "Maintainer": "Mattias",
              "Name": "Mattias",
              "Service": "Hello"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a461d1468ee279f"
          },
          "dependencies": [
            "module.ff-instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sthlm-instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws.sthlm",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:106618949447:security-group/sg-0785f6bf4abbfc115",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0785f6bf4abbfc115",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "106618949447",
            "revoke_rules_on_delete": false,
            "tags": {
              "Maintainer": "Mattias",
              "Name": "Mattias",
              "Service": "Hello"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d562dad8ca3bd74"
          },
          "dependencies": [
            "module.sthlm-instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ff-instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws.ff",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:106618949447:security-group/sg-0b1930d42781ccedc",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1930d42781ccedc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "106618949447",
            "revoke_rules_on_delete": false,
            "tags": {
              "Maintainer": "Mattias",
              "Name": "Mattias",
              "Service": "Hello"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a461d1468ee279f"
          },
          "dependencies": [
            "module.ff-instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sthlm-instance",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider.aws.sthlm",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:106618949447:subnet/subnet-0284190e5238eaa21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0284190e5238eaa21",
            "map_public_ip_on_launch": true,
            "owner_id": "106618949447",
            "tags": {
              "Maintainer": "Mattias",
              "Name": "Mattias",
              "Service": "Hello"
            },
            "vpc_id": "vpc-03d562dad8ca3bd74"
          },
          "dependencies": [
            "module.sthlm-instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ff-instance",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider.aws.ff",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:106618949447:subnet/subnet-027cc3c3e7ab9b304",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-027cc3c3e7ab9b304",
            "map_public_ip_on_launch": true,
            "owner_id": "106618949447",
            "tags": {
              "Maintainer": "Mattias",
              "Name": "Mattias",
              "Service": "Hello"
            },
            "vpc_id": "vpc-02a461d1468ee279f"
          },
          "dependencies": [
            "module.ff-instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sthlm-instance",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws.sthlm",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:106618949447:vpc/vpc-03d562dad8ca3bd74",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e2017da9f494443c",
            "default_route_table_id": "rtb-0b0d562d60114ff90",
            "default_security_group_id": "sg-06247e2ac3be89167",
            "dhcp_options_id": "dopt-80a14be9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03d562dad8ca3bd74",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b0d562d60114ff90",
            "owner_id": "106618949447",
            "tags": {
              "Maintainer": "Mattias",
              "Name": "Mattias",
              "Service": "Hello"
            }
          }
        }
      ]
    },
    {
      "module": "module.ff-instance",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws.ff",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:106618949447:vpc/vpc-02a461d1468ee279f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b2263cf83cd97861",
            "default_route_table_id": "rtb-007d6c7d75da85b8a",
            "default_security_group_id": "sg-0fc2ef897db536806",
            "dhcp_options_id": "dopt-2ee56d47",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02a461d1468ee279f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-007d6c7d75da85b8a",
            "owner_id": "106618949447",
            "tags": {
              "Maintainer": "Mattias",
              "Name": "Mattias",
              "Service": "Hello"
            }
          }
        }
      ]
    }
  ]
}